<resources>
    <string name="app_name">Hecho a Mano</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="employee">Employee</string>
    <string name="products">Products</string>
    <string name="summary">Summary</string>
    <string name="home_por_favor_elija">Por favor, elija entre crear un pedido o suministrar un pedido.</string>
    <string name="ordenes_de_clientes">Órdenes de Clientes</string>
    <string name="entrada_de_productos">Entrada de Productos</string>
    <string name="control_de_inventario">Control de Inventario</string>

    <!--LOGIN-->
    <string name="login_prompt_user">Nombre de Usuario</string>
    <string name="login_prompt_password">Ingrese su contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="login_welcome">¡Bienvenido a Artisan Stock!</string>
    <string name="login_subtitle">Por favor, introduce tu nombre de usuario o correo electrónico y tu contraseña para iniciar sesión.</string>
    <string name="load_preparando_stock">Preparando Stock</string>
    <string name="mis_ordenes">Mis Órdenes</string>
    <string name="crear_orden">Crear Orden</string>
    <string name="homepage">Homepage</string>
    <string name="no_se_han_encontrado_ordenes">No se han creado órdenes</string>
    <string name="actualmente_no_se_ha_creado_ninguna_orden">Actualmente no se ha creado ninguna orden.</string>
    <string name="barranquilla">BARRANQUILLA</string>
    <string name="recuerdos_del_pasado">Recuerdos del Pasado</string>
    <string name="jhon_ballesteros">Jhon Ballesteros</string>
    <string name="empty_results_description">No se encontraron resultados</string>
    <string name="empty_results_title">¡Upsssssss!</string>
    <string name="disponible">DISPONIBLE</string>
    <string name="number_100">100</string>
    <string name="republica_dominicana">República Dominicana</string>
    <string name="monedero_redondo">MONEDERO REDONDO</string>
    <string name="tradicional">Tradicional</string>
    <string name="mini">Mini</string>
    <string name="buscar">Buscar...</string>
    <string name="ver_agregados">Ver agregados</string>
    <string name="siguiente">Siguiente</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_hay_entrada_de_productos">No hay entrada de productos</string>
    <string name="actualmente_no_se_ha_creado_ninguna_entrada">Actualmente no se ha creado ninguna entrada</string>
    <string name="crear_entrada">Crear entrada</string>
    <string name="no_hay_historial_de_inventario">No hay historial de inventario</string>
    <string name="actualmente_no_se_ha_creado_ninguna_historial">Actualmente no se ha creado ninguna historial.</string>
    <string name="nuevo_inventario">Nuevo Inventario</string>
    <string name="historial_de_inventario">Historial de Inventario</string>
    <string name="confirmar">Confirmar</string>
    <string name="eliminar_orden">Eliminar Orden</string>
    <string name="eliminar_entrada">Eliminar entrada</string>
</resources>