<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_nav_bar"
        android:padding="2dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="13dp"
            tools:text="@string/jhon_ballesteros"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/shopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="@string/recuerdos_del_pasado"
            android:ellipsize="end"
            android:inputType="none"
            android:maxLines="4"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="@id/name"/>

        <TextView
            android:id="@+id/city"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/gray_text"
            android:background="@color/white"
            android:textStyle="bold"
            tools:text="@string/barranquilla"
            android:gravity="center"
            android:ellipsize="end"
            android:inputType="none"
            android:maxLines="4"
            android:layout_marginLeft="200dp"
            app:layout_constraintTop_toBottomOf="@id/shopName"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>