<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_cards"
    tools:context=".ui.home.HomeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/image_artisan"/>

        <ImageView
            android:id="@+id/image_artisan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_artisan"
            app:layout_constraintTop_toBottomOf="@+id/image_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_home"/>

        <TextView
            android:id="@+id/text_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginHorizontal="50dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/home_por_favor_elija"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_artisan"
            app:layout_constraintBottom_toTopOf="@id/button_clientes"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_clientes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/button_background"
            android:text="@string/ordenes_de_clientes"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/text_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_productos"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_productos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/button_background"
            android:text="@string/entrada_de_productos"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/button_clientes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_inventario"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_inventario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/button_background"
            android:text="@string/control_de_inventario"
            android:textColor="#F6F6F6"
            app:layout_constraintTop_toBottomOf="@+id/button_productos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_elipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/elipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>