<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_remove"
            android:background="@drawable/button_background_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone">
        </androidx.appcompat.widget.AppCompatImageButton>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_product_list"
            android:background="@drawable/button_list_blue"
            android:layout_width="0dp"
            android:layout_height="128dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/delete">

            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/card_semirounded_black"
                android:textSize="15sp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:paddingStart="8dp"
                tools:text="@string/republica_dominicana"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:maxLines="2"
                android:lineHeight="20sp"
                android:singleLine="false"
                tools:text="@string/monedero_redondo"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/region"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/tag_rounded"
                android:textStyle="bold"
                android:padding="4dp"
                android:layout_marginBottom="11dp"
                tools:text="@string/tradicional"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/name"/>

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/tag_rounded"
                android:textStyle="bold"
                android:padding="4dp"
                android:layout_marginStart="3dp"
                tools:text="@string/mini"
                android:gravity="center"
                android:layout_marginBottom="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/type"/>

            <TextView
                android:id="@+id/stock"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="30dp"
                android:textSize="57sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:lineHeight="0sp"
                tools:text="@string/number_100"
                tools:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/disponible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/disponible"
                android:gravity="center"
                tools:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/stock"
                app:layout_constraintTop_toBottomOf="@id/stock"
                app:layout_constraintEnd_toEndOf="@id/stock"/>


            <!-- Stock Edited -->

            <TextView
                android:id="@+id/stock_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:lineHeight="0sp"
                tools:text="/100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="DISP."
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@id/stock_available"
                app:layout_constraintTop_toBottomOf="@id/stock_available"
                app:layout_constraintEnd_toEndOf="@id/stock_available"/>

            <TextView
                android:id="@+id/stock_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                android:textSize="51sp"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:textStyle="bold"
                android:lineHeight="0sp"
                tools:text="@string/number_100"
                app:layout_constraintEnd_toStartOf="@id/stock_available"
                app:layout_constraintBottom_toBottomOf="@id/stock_available"/>

            <TextView
                android:id="@+id/agr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="AGR."
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@id/stock_edited"
                app:layout_constraintTop_toBottomOf="@id/stock_edited"
                app:layout_constraintEnd_toEndOf="@id/stock_edited"/>


            <EditText
                android:id="@+id/edit_stock"
                android:layout_width="124dp"
                android:layout_height="90dp"
                android:background="@color/white"
                android:padding="4dp"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:textSize="57sp"
                android:textColor="@color/gray_text"
                android:textStyle="bold"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>