<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.customerorders.SummaryCustomerOrderActivity"
    android:padding="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_rounded_blue"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/employee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:text="Jhon Ballesteros"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/employee_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:text="Barranquilla"
            app:layout_constraintTop_toBottomOf="@id/employee_name"
            app:layout_constraintStart_toStartOf="@id/employee_name"/>
        <TextView
            android:id="@+id/employee_shop_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:maxLines="2"
            android:lineHeight="16sp"
            android:singleLine="false"
            tools:text="Souvenirs Pro"
            app:layout_constraintEnd_toStartOf="@id/employee_total"
            app:layout_constraintTop_toBottomOf="@id/employee_city"
            app:layout_constraintStart_toStartOf="@id/employee_name"/>
        <TextView
            android:id="@+id/employee_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            tools:text="$76.240.000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/label_productos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="Productos"
        app:layout_constraintTop_toBottomOf="@id/container_employee"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/edit_products"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="@id/label_productos"
        app:layout_constraintBottom_toBottomOf="@id/label_productos"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/label_productos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/label_productos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/total"/>

    <TextView
        android:id="@+id/label_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="Total ........................."
        app:layout_constraintEnd_toStartOf="@id/total"
        app:layout_constraintBottom_toTopOf="@id/linear_bottom"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#3EA649"
        tools:text="$210.000"
        app:layout_constraintTop_toTopOf="@id/label_total"
        app:layout_constraintBottom_toBottomOf="@id/label_total"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="4">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button_background_secondary"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_crear_orden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/crear_entrada"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_weight="3"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_eliminar_orden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_remover"
            android:drawableTint="@color/white"
            android:paddingStart="10dp"
            android:background="@drawable/button_background_red"
            android:text="@string/eliminar_entrada"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>